# To-do-application

./: .gitignore  alembic.ini  database.py  main.py  models.py  pyproject.toml  ruff_output.txt  test_crud.py
.github/workflows/: ci.yml
migrations/: env.py
migrations/versions/: 6b6f1be97894_initial_migration.py
